--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -75,13 +75,11 @@
     {% if page_type == "category" %}
         <script src="{{ '/assets/js/subject.js' }}"></script>
     {% else %}
-        <script src="{{ '/assets/js/tocbot.min.js' }}"></script>
-        <script src="{{ '/assets/js/sweet-scroll.min.js' }}"></script>
-        <script src="{{ '/assets/js/highlight.min.js' }}"></script>
-        <link id="highlight-default" rel="stylesheet" href="{{ '/assets/css/highlight-default.min.css' }}">
-        <link id="highlight-dark" rel="stylesheet" href="{{ '/assets/css/highlight-dark.min.css' }}">
         <script src="{{ '/assets/js/post.js' }}"></script>
+        <link rel="preload" href="{{ '/assets/css/highlight.min.css' }}" as="style" onload="this.onload=null;this.rel='stylesheet'">
+        <noscript><link rel="stylesheet" href="{{ '/assets/css/highlight.min.css' }}"></noscript>
+        <script defer src="{{ '/assets/js/highlight.min.js' }}"></script>
     {% endif %}
-    {% include search_event.html %}
     <script src="{{ '/assets/js/common.js' }}"></script>
+    {% include search_event.html %}
 </html>
